--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,13 @@
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto deserunt placeat fugiat obcaecati, vero, labore minus odit, recusandae doloribus exercitationem quaerat. Sit, quod a atque laborum perferendis nostrum voluptatem saepe?</p>
     <form action="">
         <label> Insert your recipe here </label>
-        <input type="text">
-        <input type="submit" value="Submit">
+        <input type="text" id='recipeInput'>
+        
+        <input type="submit" id="submit">
     </form>
 </body>
+<script src="fodmapFinder.js"></script>
 </html>
+
+
+
