--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Fodmap Finder</h1>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto deserunt placeat fugiat obcaecati, vero, labore minus odit, recusandae doloribus exercitationem quaerat. Sit, quod a atque laborum perferendis nostrum voluptatem saepe?</p>
-    <form action="">
+    <form action="results.html">
+        
         <label> Insert your recipe here </label>
         <input type="text" id='recipeInput'>
         
